--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div class="board">
-        <div class="square" data-id="0"></div>
-        <div class="square" data-id="1"></div>
-        <div class="square" data-id="2"></div>
-        <div class="square" data-id="3"></div>
-        <div class="square" data-id="4"></div>
-        <div class="square" data-id="5"></div>
-        <div class="square" data-id="6"></div>
-        <div class="square" data-id="7"></div>
-        <div class="square" data-id="8"></div>
+        <div class="cell" data-id="0"></div>
+        <div class="cell" data-id="1"></div>
+        <div class="cell" data-id="2"></div>
+        <div class="cell" data-id="3"></div>
+        <div class="cell" data-id="4"></div>
+        <div class="cell" data-id="5"></div>
+        <div class="cell" data-id="6"></div>
+        <div class="cell" data-id="7"></div>
+        <div class="cell" data-id="8"></div>
     </div>
 </body>
 </html>
