--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <!-- <h3 class="title">Tic-Tac-Toe</h3> -->
     <div class="board">
         <div class="cell" data-id="0"></div>
         <div class="cell" data-id="1"></div>
